Added web application logic

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id("java")
+    id 'org.springframework.boot' version '3.4.5'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = "org.example"
@@ -14,6 +16,11 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter")
     implementation("org.deeplearning4j:deeplearning4j-core:0.9.1")
     implementation("nz.ac.waikato.cms.weka:weka-stable:3.8.0")
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter")
+    implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation("org.springframework.boot:spring-boot-starter-web")
+
 }
 
 tasks.test {
